# ContextCache

./: .env  README.md
proxy/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
proxy/app/: __init__.py  auth.py  cache.py  config.py  db.py  main.py  pricing.py  router.py  schemas.py
proxy/app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
proxy/app/routes/: chat.py
proxy/tests/: test_smoke.py
src/: routeTree.gen.ts  styles.css
src/components/: activity-feed.tsx  app-shell.tsx  command-palette.tsx  feedback-button.tsx  onboarding-checklist.tsx  request-timeline.tsx
src/components/landing/: architecture.tsx  calculator.tsx  extras.tsx  playground.tsx
src/integrations/supabase/: types.ts
src/lib/: analytics.functions.ts  keys.functions.ts  model-pricing.ts  orgs.functions.ts
src/routes/: __root.tsx  auth.tsx  index.tsx  sitemap[.]xml.ts
src/routes/_authenticated/: dashboard.tsx  docs.tsx  keys.tsx  quickstart.tsx  route.tsx  settings.tsx  status.tsx
supabase/: config.toml
supabase/migrations/: 20260713081055_cf665633-30fa-4bb4-9e84-633ed5c05f1d.sql
