[project]
name = "contextcache-proxy"
version = "0.1.0"
description = "The intelligent caching layer for LLM applications."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "asyncpg>=0.29",
  "redis>=5.0",
  "openai>=1.54",
  "anthropic>=0.39",
  "orjson>=3.10",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
